data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_675.wast
;; 6. **Test Description 6**:    - **Test**: Loop with a `br_if` wrapped around an OR condition combining two expressions.    - **Constraint**: Check if the loop branches when at least one condition is true.    - **Reason**: Errors may arise due to mishandling of logical operations.

(assert_invalid
  (module (func $loop-with-br_if-or-conditions
    (loop (br_if 0 (i32.or (i32.const 1) (i32.const 0))) end)
  ))
  "type mismatch"
)